--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day-1 Basic HTML</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1><center>Codemate Internship Program</center></h1>
-    <h1>Welcome to codemate</h1>
-    <h2>Welcome to codemate</h2>
-    <h3>Welcome to codemate</h3>
-    <h4>Welcome to codemate</h4>
-    <h5>Welcome to codemate</h5>
-    <h6>Welcome to codemate</h6>
-
-</body>
+    <h1>Welcome to Codemate Internship Program</h1>
+    <h2>Welcome to Codemate Internship Program</h2>
+    <h3>Welcome to Codemate Internship Program</h3>
+    <h4>Welcome to Codemate Internship Program</h4>
+    <h5>Welcome to Codemate Internship Program</h5>
+    <h6>Welcome to Codemate Internship Program</h6>
+    <!-- strong tag is semantic tag 
+    and b is formatting tag -->
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+      sint, officiis voluptatibus hic modi autem sequi voluptates tempore fugit
+      rem.
+    </p>
+    <p>
+      Nihil quis placeat distinctio explicabo, minus vitae vel nostrum commodi
+      quisquam culpa cumque aut asperiores quasi, id, mollitia praesentium et!
+    </p>
+    <p>
+      Quia fugiat, officiis nobis possimus necessitatibus vel magni, consequatur
+      ea voluptatum at ullam libero dolore fugit obcaecati aut tenetur
+      veritatis?
+    </p>
+    <p>
+      Cumque nulla quo aperiam recusandae amet corporis distinctio debitis
+      provident totam voluptatem? Dignissimos harum sunt adipisci reiciendis
+      consequatur distinctio blanditiis!
+    </p>
+    <p>
+      Non dolorum qui reprehenderit consequuntur impedit deleniti, nisi
+      corporis? Dolores ullam iusto ea dolore culpa sapiente quas ipsa iure
+      laboriosam!
+    </p>
+  </body>
 </html>
